# EtherCat_SOEM

./: CMakeLists.txt  README.md
lcm-types/: file_list.txt  leg_data.lcm
lcm-types/cpp/: leg_data.hpp
lcm-types/lcmtypes/: leg_data.java
lcm-types/python/: leg_data.py
osal/: osal.h
oshw/linux/: nicdrv.h  oshw.h
result_data/: data_convert_auto.sh
scripts/: data_log.sh  log_convert.sh
soem/: ethercatbase.c  ethercatcoe.c  ethercatconfig.c  ethercatdc.c  ethercatfoe.c  ethercatmain.c  ethercatmain.h  ethercatprint.c  ethercatsoe.c  ethercatsoe.h  ethercattype.h
test/: data_process.cpp  data_process.h  ecat_opr.cpp  ecat_opr.h  kbd.h  kbd_lnx.cpp  main.cpp  main.h  pid.cpp  pid.h
